feat: add unit test setup

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "drizzle-kit push && concurrently --kill-others \"ng serve\" \"tsx watch --ignore 'src/client/**/*' src/main.dev.ts\"",
     "check:format": "prettier --ignore-path .gitignore --check .",
+    "test:unit": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
     "test:e2e": "cypress run --browser chrome",
     "build:vercel": "ng build && drizzle-kit migrate",
     "db:generate": "drizzle-kit generate",
@@ -50,6 +51,7 @@
     "@hono/swagger-ui": "^0.2.2",
     "@iconify-json/uil": "^1.1.8",
     "@ts-rest/open-api": "^3.45.2",
+    "@types/jasmine": "~5.1.0",
     "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
@@ -57,6 +59,12 @@
     "cypress": "^13.10.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.22.7",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.0",
     "tailwindcss": "^3.4.3",
