--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,15 @@ jobs:
           node-version: 20.x
       - run: npm ci --prefer-offline --no-audit
       - run: npm run check:format
+  test-unit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+      - run: npm ci --prefer-offline --no-audit
+      - run: npm run test:unit
   test-e2e:
     runs-on: ubuntu-latest
     steps:
