--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.json",
             "assets": [
               {
