--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.3.0",
     "tailwindcss": "^3.4.3",
     "tsx": "^4.10.2",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "zone.js": "~0.14.3"
   }
 }
